<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/doubutuText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:text="@string/non_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/inuBtn"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/inu_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/hamuBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nekoBtn"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/neko_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/inuBtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/hamuBtn"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/hamu_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/risuBtn"
        app:layout_constraintStart_toStartOf="@+id/inuBtn" />

    <Button
        android:id="@+id/usaBtn"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:text="@string/usa_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/hamuBtn"
        app:layout_constraintEnd_toEndOf="@+id/nekoBtn" />

    <Button
        android:id="@+id/risuBtn"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/risu_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/suzumeBtn"
        app:layout_constraintStart_toStartOf="@+id/inuBtn" />

    <Button
        android:id="@+id/umaBtn"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:text="@string/uma_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/risuBtn"
        app:layout_constraintEnd_toEndOf="@+id/nekoBtn" />

    <Button
        android:id="@+id/suzumeBtn"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:text="@string/suzume_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/inuBtn" />

    <Button
        android:id="@+id/penBtn"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:text="@string/pen_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/suzumeBtn"
        app:layout_constraintEnd_toEndOf="@+id/nekoBtn" />

    <Button
        android:id="@+id/ranBtn"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/ran_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/doubutuImage"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/image_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/maku" />
</androidx.constraintlayout.widget.ConstraintLayout>